--- a/BE-shape-real-time/package.json
+++ b/BE-shape-real-time/package.json
@@ -2,17 +2,22 @@
   "name": "node-express-api",
   "version": "1.0.0",
   "description": "",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node ./index.js"
+    "build": "tsc && node dist/index.js",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "bluebird": "3.7.2",
-    "express": "4.17.1",
+    "express": "^4.16.4",
     "file-loader": "6.2.0",
-    "webrtc-adapter": "8.0.0",
-    "socket.io": "4.1.2"
+    "socket.io": "4.1.2",
+    "uuid": "^8.3.2",
+    "webrtc-adapter": "8.0.0"
   },
   "devDependencies": {
-    "nodemon": "2.0.7"
+    "@types/express": "^4.16.1",
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.3"
   }
 }
