--- a/FE-shape-real-time/package.json
+++ b/FE-shape-real-time/package.json
@@ -18,12 +18,10 @@
     "@types/redux-saga": "^0.10.5",
     "axios": "^0.24.0",
     "babel-loader": "8.2.2",
-    "bluebird": "3.7.2",
     "bootstrap-sass": "3.4.1",
     "classnames": "2.3.1",
     "css-loader": "5.2.6",
     "expose-loader": "3.0.0",
-    "express": "4.17.1",
     "file-loader": "6.2.0",
     "font-awesome": "4.7.0",
     "html-webpack-plugin": "5.3.1",
@@ -41,27 +39,21 @@
     "sass-loader": "11.1.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
-    "socket.io": "4.1.2",
     "socket.io-client": "4.1.2",
     "style-loader": "2.0.0",
     "terser-webpack-plugin": "5.1.2",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2",
     "webpack": "5.38.1",
-    "webpack-cli": "4.7.0",
-    "webrtc-adapter": "8.0.0"
+    "webpack-cli": "4.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src",
+    "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx ./src"
   },
   "browserslist": {
     "production": [
@@ -78,6 +70,10 @@
   "devDependencies": {
     "@types/lodash": "^4.14.178",
     "@types/redux-logger": "^3.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "eslint": "^8.5.0",
+    "eslint-plugin-react": "^7.27.1",
     "redux-logger": "^3.0.6"
   },
   "proxy": "http://localhost:5000"
