--- a/FE-shape-real-time/package.json
+++ b/FE-shape-real-time/package.json
@@ -22,6 +22,7 @@
     "classnames": "2.3.1",
     "css-loader": "5.2.6",
     "expose-loader": "3.0.0",
+    "fabric": "^4.6.0",
     "file-loader": "6.2.0",
     "font-awesome": "4.7.0",
     "html-webpack-plugin": "5.3.1",
@@ -32,6 +33,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
@@ -68,6 +70,7 @@
     ]
   },
   "devDependencies": {
+    "@types/fabric": "^4.5.6",
     "@types/lodash": "^4.14.178",
     "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
